\name{news}
\title{Package news for weibullness package}

\section{version 1.22.12}{
  \itemize{
    \item The new  \code{weibull.rm} function provides robust parameter estimates for the two-parameter Weibull distribution.
}}

