@@ -1,19 +1,24 @@
-f9f63830726a1f8a05915c4326096686 *DESCRIPTION
-864008f949bf6aeb1ca7bfb6bce1d484 *NAMESPACE
-63d4a6728d33367bb20a586d3af7e01c *R/weibull.estimate.R
-64356cf817876cb619f686f50dc0c8b4 *R/weibullness.R
+7577b27209484d43e685d65382f52725 *DESCRIPTION
+135cce42b34b89bb0b6ec8bf1d492c22 *NAMESPACE
+f8f373048d3fdf41dd7a119946c95875 *R/weibull.estimate.R
+fbe179b046ca8467e7fe8d2e05ed0754 *R/weibullness.R
+3a769770a9256b766e657a9b3fe9b9c2 *R/wp.plot.R
 5520b7195566a745a9767e78d96a1302 *R/zzz.R
-d0afe25299a329888d152e72d69aa02e *build/partial.rdb
+8dd381bf1bb83e699c090daae4ea8525 *build/partial.rdb
+8685b6038fd62a91e413f3595e2594bb *data/Wdata.rda
 f265cd3f013d03eacc15a038529c36f0 *data/Weibull_Quantiles_from_3_to_1000-bunzip2.rda
-9241e1d8ec6d5462b2c3639c83ff5d81 *inst/CITATION
-ab3e0f4cd2b1fbb14930f40b5a0b926e *inst/NEWS.Rd
-04fb6bb6dd78b5f4245d041c937fcf61 *man/Weibull.Plot.Quantiles.Rd
-55db5d387cea951298fbf8c0728cf907 *man/print.weibull.estimate.Rd
+26787502fd4791fafcfdad1a2a1435f9 *inst/CITATION
+9839e9f187d2288d6aba8b8ec97ce8ba *inst/NEWS.Rd
+5a62d872359b01f6ca89f961199d33ac *man/Wdata.Rd
+4cb17a357cef60435594501576672c00 *man/Weibull.Plot.Quantiles.Rd
+b86d17f2c89d6aacd03ff8b6a4c9b318 *man/print.weibull.estimate.Rd
 4bd0d5c3c97f9000c5829158e30b9874 *man/print.wp.test.critical.Rd
-7b73f6aa0fe3d6c57832b07bd93f86eb *man/weibull.mle.Rd
-d94205c8c5cb80e101ec6f5076a3f2f5 *man/weibull.rm.Rd
-a04d5b4d9370f9e71f095a6fa3176578 *man/weibull.threshold.Rd
-fde5176c63a32315773133d22318079a *man/weibull.wp.Rd
-876681b116aaf5a57f080abc13fb4874 *man/wp.test.Rd
-1c327eb48185a20f248b9463f56d4228 *man/wp.test.critical.Rd
-37727c525c4e8b05362542f6d7526afc *man/wp.test.pvalue.Rd
+77112b661ad5cdd5145af525166c607b *man/weibull.ic.Rd
+5f65a6b53b9b2b8b333cc5f3c02388d3 *man/weibull.mle.Rd
+d6e1ea057ed72e81fab40c3cd0a7eb72 *man/weibull.rm.Rd
+ba74d5e090971be6a5ac06bf9fe452e9 *man/weibull.threshold.Rd
+7ec98f85ba694229bd8485d67a9a2856 *man/weibull.wp.Rd
+e82c0dc8cda9d0d89be6cb749112dff6 *man/wp.plot.Rd
+c5929c799cd4ac17f1e4fb96d9cc4ce8 *man/wp.test.Rd
+53091eded098b519544eda6c444b5f42 *man/wp.test.critical.Rd
+eb642e0c76054263a73d2825e639b84e *man/wp.test.pvalue.Rd
