@@ -1,11 +1,16 @@
-exportPattern("^[[:alpha:]]+")
+## exportPattern("^[[:alpha:]]+")
+## exportPattern("^[^_]+")
 ## exportPattern(".")
 
 #functions
 export(wp.test, wp.test.pvalue, wp.test.critical)
-export(weibull.mle, weibull.wp, weibull.threshold)
+export(weibull.mle, weibull.wp, weibull.rm, weibull.threshold)
+export(weibull.ic)
+export(wp.plot)
 
-importFrom("stats", approxfun, complete.cases, cor, ppoints, uniroot, coef, lm, sd, median) 
+importFrom("stats", approxfun, complete.cases, cor, ppoints, uniroot, coef, lm, sd, median, predict) 
+importFrom("stats", pgamma, nlm)
+importFrom("graphics", axis, curve)
 
 S3method(print, wp.test.critical)
 S3method(print, weibull.estimate)
