@@ -74,7 +74,7 @@ function(x, a, interval.threshold, extendInt="downX") {
    }
    if  (missing(interval.threshold)) {
       SD = sd(x)
-      TINY = SD * .Machine$double.neg.eps^0.25 
+      TINY = SD * .Machine$double.neg.eps
       LOWER = min(x) - SD
       UPPER = min(x) - TINY 
       interval.threshold = c(LOWER,UPPER) 
@@ -96,4 +96,144 @@ function(x, digits = getOption("digits"), ...)
    print(ans, quote=FALSE)
    invisible(x)
 }
-#######################
+
+###################################################################
+# Interval Censored 
+###################################################################
+
+# =================================================================
+# Incomplete Upper Gamma Function 
+#------------------------------------------------------------------
+lGAMMA.incomplete = function(a,b) {
+    if( a <= 0 ) a = .Machine$double.neg.eps
+    return( pgamma(b,a,lower.tail=FALSE,log.p=TRUE) + lgamma(a) )
+}
+GAMMA.incomplete = function(a,b) { exp(lGAMMA.incomplete(a,b)) }
+# =================================================================
+
+# ===================================================================
+# Version   : 1.0,   Dec. 25, 2016
+#             1.1,   Feb. 14, 2020
+#             1.2,   Jan.  4, 2023
+# NOTE: Euler-Mascheroni constant gam = -digamma(1)
+# ===================================================================
+U.i.s = function(kappa.s, theta.s, ai, bi) { 
+   TINY = .Machine$double.neg.eps
+
+   if ( ai > bi ) return(0.0)
+   if ( abs(bi-ai) < TINY ) return(log(ai))
+
+   t.ai = (ai/theta.s)^kappa.s
+   exp.t.ai = exp(-t.ai)
+
+   t.bi = (bi/theta.s)^kappa.s
+   exp.t.bi = exp(-t.bi)
+
+   D.i.s = exp.t.ai - exp.t.bi
+
+   if (ai>0) {
+      tmpai = log(ai)*exp.t.ai + GAMMA.incomplete(0,t.ai)/kappa.s
+   } else {
+      tmpai = log(theta.s) + digamma(1)/kappa.s
+   }
+
+   BIG = .Machine$double.xmax^0.2
+   if (bi >= BIG) {   ## .Machine$double.xmax
+      tmpbi = 0
+   } else {
+      tmpbi = log(bi)*exp.t.bi + GAMMA.incomplete(0,t.bi)/kappa.s
+   }
+
+   return( (tmpai-tmpbi)/D.i.s )
+}
+#
+U.i.s.0.inf = function(kappa.s, theta.s) { log(theta.s) + digamma(1)/kappa.s }
+#
+# U.i.s (2, 3, 0, Inf);  U.i.s.0.inf(2, 3)
+# U.i.s (2, 3, 3, 3);    U.i.s (2, 3, 3, 3.000)
+U.i.s.0.bi = function(kappa.s, theta.s, bi) { 
+   A = log(theta.s) + digamma(1)/kappa.s
+   t.bi = (bi/theta.s)^kappa.s
+   tmp = log(bi)*exp(-t.bi) + GAMMA.incomplete(0, t.bi)/kappa.s
+   (A - tmp) / (1- exp(-t.bi))
+   ## A  /(1- exp(-t.bi)) - tmp/exp(-t.bi) 
+}
+# U.i.s (2,3, 0.0, 3) ;    U.i.s.0.bi(2,3, 3)
+#
+U.i.s.ai.inf = function(kappa.s, theta.s, ai) { 
+   t.ai = (ai/theta.s)^kappa.s
+   tmp = log(ai)*exp(-t.ai) + GAMMA.incomplete(0, t.ai)/kappa.s
+   tmp / exp(-t.ai)
+}
+# U.i.s (2, 3, 1, Inf) ;    U.i.s.ai.inf(2,3,1)
+
+
+# ===================================================================
+# Version   : 1.0,   Dec. 25, 2016
+#             1.1,   Feb. 14, 2020
+#             1.2,   Jan.  4, 2023
+# NOTE: Euler-Mascheroni constant gam = -digamma(1)
+# ===================================================================
+V.i.s = function(kappa, kappa.s, theta.s, ai, bi) { 
+   TINY = .Machine$double.neg.eps
+   if ( ai > bi ) return(0.0)
+   if ( abs(bi-ai) < TINY ) return(ai^kappa)
+
+   t.ai = (ai/theta.s)^kappa.s
+   t.bi = (bi/theta.s)^kappa.s
+
+   D.i.s = exp(-t.ai) - exp(-t.bi)
+
+   tmpai = GAMMA.incomplete( (kappa+kappa.s)/kappa.s, (ai/theta.s)^kappa.s )
+   tmpbi = GAMMA.incomplete( (kappa+kappa.s)/kappa.s, (bi/theta.s)^kappa.s )
+
+   theta.s^kappa * (tmpai-tmpbi)/D.i.s
+}
+# V.i.s (1, 2, 3, 1, Inf);  V.i.s (1, 2, 3, 0, Inf);  V.i.s (1, 2, 3, 0, 4)
+# V.i.s (1, 2, 3, 9, 9);   V.i.s (1, 2, 3, 8.9999, 9)
+# V.i.s (1, 2, 3, 1, 1);   V.i.s (1, 2, 3, 0.9999, 1)
+
+##################################################################
+## V.i.s = function(kappa, kappa.s, theta.s, ai, bi) 
+## U.i.s = function(kappa.s, theta.s, ai, bi) 
+weibull.ic = function(X, start=c(1,1), maxits=10000, eps=1E-5){
+   kappa = start[1]
+   theta = start[2]
+   ij = dim(X)
+   n  = ij[1]
+   if ( ij[2] > 2 ) stop(" Warning: The data X should be n x 2 matrix.")
+   if ( any(X[,1] > X[,2]) )  stop(" Warning: The data should satisfy a <= b.");
+   iter = 0
+   converged = FALSE
+
+   # Start the EM
+   colnames(X) = NULL; rownames(X) = NULL
+
+   ai = X[,1];  bi = X[,2]
+
+   fn = function(newkappa) {
+        sumU.i.s = 0
+        sumV.i.s = 0
+        for ( i in seq_len(n) ) sumU.i.s = sumU.i.s + U.i.s(kappa, theta, ai[i], bi[i])
+        for ( i in seq_len(n) ) sumV.i.s = sumV.i.s + V.i.s(newkappa, kappa, theta, ai[i], bi[i])
+        -1 * ( n*log(newkappa) + newkappa*sumU.i.s - n*log(sumV.i.s) )
+   }
+
+   while( (iter<maxits)&(!converged) ) {
+      OPT = nlm(fn, kappa); newkappa = OPT$estimate
+      ## OPT = nlminb(kappa,fn); newkappa = OPT$par
+
+      meanV.i.s = 0
+      for ( i in seq_len(n) ) meanV.i.s = meanV.i.s + V.i.s(newkappa, kappa, theta, ai[i], bi[i])/n
+      newtheta = meanV.i.s^(1/newkappa)
+
+      # assess convergence
+      converged = (abs(newkappa-kappa)<eps*abs(newkappa)) & (abs(newtheta -theta)<eps*abs(newtheta))
+      iter = iter+1
+      kappa   = newkappa
+      theta   = newtheta
+   }
+   list( shape=newkappa, scale=newtheta, iter=iter, conv=converged )
+}
+#------------------------------------------------------------------
+
