@@ -1,6 +1,13 @@
 \name{news}
 \title{Package news for weibullness package}
 
+\section{version 1.23.8}{
+  \itemize{
+    \item The new \code{weibull.ic} function provides the estimates of the Weibull parameters with interval censored data.
+    \item The new \code{wp.plot} function provides the Weibull probability plot for the two-parameter Weibull distribution.
+    \item The new \code{Wdata} variable provides the collection of the data sets following the Weibull distribution.
+}}
+
 \section{version 1.22.12}{
   \itemize{
     \item The new  \code{weibull.rm} function provides robust parameter estimates for the two-parameter Weibull distribution.
